# AR-devUp

./: README.md  ex1_150920.txt
arm_controllers/: CMakeLists.txt  controller_plugins.xml
arm_controllers/scripts/: publish_test.py  safety_test.py  task_space_publisher.py
arm_controllers/src/: adaptive_variable_impedance_controller.cpp  custom_torque_controller.cpp  demo_controller.cpp  gravity_comp_controller.cpp  gravity_controller_reactive.cpp  task_space_controller.cpp  visual_servo_controller.cpp
devel/: .catkin  local_setup.sh
devel/include/arm_controllers/: ControllerJointState.h  PassivityControllerParamsConfig.h
devel/lib/pkgconfig/: arm_controllers.pc  elfin_description.pc  elfin_gazebo.pc
devel/lib/python2.7/dist-packages/arm_controllers/cfg/: PassivityControllerParamsConfig.py
devel/lib/python2.7/dist-packages/arm_controllers/msg/: _ControllerJointState.py  __init__.py
devel/share/arm_controllers/cmake/: arm_controllers-msg-paths.cmake  arm_controllersConfig.cmake
devel/share/arm_controllers/docs/: PassivityControllerParamsConfig-usage.dox  PassivityControllerParamsConfig.dox  PassivityControllerParamsConfig.wikidoc
devel/share/elfin_description/cmake/: elfin_descriptionConfig.cmake
devel/share/elfin_gazebo/cmake/: elfin_gazeboConfig.cmake
devel/share/roseus/ros/arm_controllers/: manifest.l
elfin/elfin_description/urdf/: box.urdf.xacro  box_small.urdf.xacro  elfin3.urdf.xacro  elfin_robot.gazebo
elfin/elfin_gazebo/config/: custom_torque_controller.yaml  demo_controller.yaml  gravity_controller_reactive.yaml  task_space_controller.yaml  visual_servo_controller.yaml
elfin/elfin_gazebo/launch/: elfin3_empty_world.launch  elfin3_experiment1_world.launch
src/: README.md  ex1.txt
src/arm_controllers/src/: gravity_comp_controller.cpp
(+7 files in other folders)
